# g4hrs

./: CMakeLists.txt  README  g4hrs.cc  pullgitinfo.py  tatus
HRSTransport/: HRSTransBase.hh  HRSTransport.cc  HRSTransport.hh  Makefile
HRSTransport/HRSTransSTD/: HRSTransSTD.cc  HRSTransSTD.hh
HRSTransport/hamcCREXTrans/: crex_4degr.f  crex_4degr.hh  hamcCREXTrans.cc  hamcCREXTrans.hh
HRSTransport/hamcPREXTrans/: HRSTransBase.cc  hamcPREXTrans.cc  hamcPREXTrans.hh  prex_forward.f  prex_forward.hh  test  test.C
include/: g4hrsBeamTarget.hh  g4hrsDatabase.hh  g4hrsDetectorConstruction.hh  g4hrsEMField.hh  g4hrsEMFieldSetup.hh  g4hrsEvent.hh  g4hrsEventAction.hh  g4hrsGenBeam.hh  g4hrsGenFlat.hh  g4hrsGenNuclElastic.hh  g4hrsGenericDetector.hh  g4hrsGenericDetectorHit.hh  g4hrsGenericDetectorSum.hh  g4hrsGlobalField.hh  g4hrsIO.hh  g4hrsLinkDef.h  g4hrsMagneticField.hh  g4hrsMaterial.hh  g4hrsMessenger.hh  g4hrsMultScatt.hh  g4hrsParallelWorld.hh  g4hrsPrimaryGeneratorAction.hh  g4hrsRun.hh  g4hrsRunAction.hh  g4hrsRunData.hh  g4hrsSteppingAction.hh  g4hrsTextFile.hh  g4hrsTransportFunction.hh  g4hrsTune.hh  g4hrsUsageManager.hh  g4hrsVEventGen.hh  g4hrsVertex.hh  g4hrsglobs.hh  g4hrstypes.hh
macros/: backup_runexample.mac  runexample.mac  vis.mac
scripts/: BField_Septum.ini
src/: g4hrsBeamTarget.cc  g4hrsDatabase.cc  g4hrsDetectorConstruction.cc  g4hrsEMField.cc  g4hrsEMFieldSetup.cc  g4hrsEvent.cc  g4hrsEventAction.cc  g4hrsGenBeam.cc  g4hrsGenFlat.cc  g4hrsGenNuclElastic.cc  g4hrsGenericDetector.cc  g4hrsGenericDetectorHit.cc  g4hrsGenericDetectorSum.cc  g4hrsGlobalField.cc  g4hrsIO.cc  g4hrsMagneticField.cc  g4hrsMaterial.cc  g4hrsMessenger.cc  g4hrsMultScatt.cc  g4hrsParallelWorld.cc  g4hrsPrimaryGeneratorAction.cc  g4hrsRun.cc  g4hrsRunAction.cc  g4hrsRunData.cc  g4hrsSteppingAction.cc  g4hrsTextFile.cc  g4hrsTransportFunction.cc  g4hrsTune.cc  g4hrsUsageManager.cc  g4hrsVEventGen.cc  g4hrsVertex.cc
src/fields/: BField_Dipole.cc  BField_Dipole.hh  BField_Dipole_Fringe.cc  BField_Dipole_Fringe.hh  BField_Quad.cc  BField_Quad.hh  BField_Septum.cc  BField_Septum.hh  BField_Septum.ini  septumtest.C
src/fortran/: dipolert2.f
vis/: vis.mac
